tests/outref/TCF002.ref

-- TCF002 : OCTO345 : Report syntax errors for function call parameter type mismatches
select ABS('balloons') as badarg from names;

select REPLACE('balloons', 12, 'hot air') as badarg from names;

select PG_CATALOG.PG_GET_EXPR('balloons', true) as badarg from names;

[ERROR] PATH:LINENUM DATE TIME : Parameter type mismatch in function 'ABS': expected NUMERIC, got VARCHAR
Error with syntax near (line 1, column 21):

select ABS('balloons') as badarg from names;
                    ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select ABS('balloons') as badarg from names;
[ERROR] PATH:LINENUM DATE TIME : Parameter type mismatch in function 'REPLACE': expected VARCHAR, got NUMERIC
Error with syntax near (line 1, column 28):

select REPLACE('balloons', 12, 'hot air') as badarg from names;
                           ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select REPLACE('balloons', 12, 'hot air') as badarg from names;
[ERROR] PATH:LINENUM DATE TIME : Parameter type mismatch in function 'PG_CATALOG.PG_GET_EXPR': expected INTEGER, got BOOLEAN
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select PG_CATALOG.PG_GET_EXPR('balloons', true) as badarg from names;

